angular-app-example/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
  labels:
    app: angular-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: angular-app
